@@ -27,3 +27,4 @@ Better Vsync
 Fix camera waves
 Fix snow weather
 Fix jumping to ground from water effect
+Wrapping summary screen
